add a new pkg file
