# main.go
@@ -10,6 +10,7 @@ import (
 	"yplanning/pkg/color"
 	"yplanning/pkg/date"
 	"yplanning/pkg/group"
+	"yplanning/pkg/groupuser"
 	"yplanning/pkg/user"
 
 	_ "yplanning/docs"
@@ -35,27 +36,33 @@ func Routes(configuration *config.Config) *chi.Mux {
 	router.Mount("/api/auth", authentication.Routes(configuration))
 
 	router.Group(func(r chi.Router) {
+		jwtSecret := os.Getenv("JWT_SECRET")
+		if jwtSecret == "" {
+			log.Fatal("JWT_SECRET is required")
+		}
 		r.Use(authentication.AuthMiddleware(os.Getenv("JWT_SECRET")))
 		r.Mount("/api/group", group.Routes(configuration))
 		r.Mount("/api/date", date.Routes(configuration))
 		r.Mount("/api/availability", availability.Routes(configuration))
 		r.Mount("/api/color", color.Routes(configuration))
 		r.Mount("/api/user", user.Routes(configuration))
+		r.Mount("/api/group-user", groupuser.Routes(configuration))
 	})
 
 	return router
 }
 
 func main() {
+	if err := godotenv.Load(); err != nil {
+		log.Println(".env file not found")
+	}
 	// Initialisation de la configuration
 	configuration, err := config.New()
 	if err != nil {
 		log.Panicln("Configuration error:", err)
 	}
-	godotenv.Load()
 	// Initialisation des routes
 	router := Routes(configuration)
-
 	log.Println("Server running on http://localhost:" + os.Getenv("PORT"))
 	log.Println("Swagger UI available at http://localhost:" + os.Getenv("PORT") + "/swagger/index.html")
 	log.Fatal(http.ListenAndServe(":"+os.Getenv("PORT"), router))
